BUG:345754 Fixes perspective assistant lockup

This was caused by an attempt to calculate the intersection on two nearly
parallel lines. The fix is of course to not do the calculation when two
lines are practically parallel.

BUG:345754